<resources>

    <string name="app_name">SIGESC</string>
    <string name="start">Iniciar</string>
    <string name="preview">Voltar</string>
    <string name="next">Avançar</string>
    <string name="skip">Pular</string>
    <string name="finish">Finalizar</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="government">Órgão Público</string>
    <string name="sign_in">Acessar</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Habitantes, locais, etc...</string>
    <string name="go">Ir</string>
    <string name="exit">Sair</string>
    <string name="home">Início</string>
    <string name="my_location">Minha Localização</string>
    <string name="normal">Normal</string>
    <string name="map_satellite">Satélite</string>
    <string name="map_terrain">Terreno</string>
    <string name="map">Mapa</string>
    <string name="modifiedAddress">Endereço</string>
    <string name="edification">Edificação</string>
    <string name="dwellers">Moradores</string>
    <string name="location">Localização</string>
    <string name="thoroughfare">Logradouro</string>
    <string name="number">Número</string>
    <string name="district">Bairro</string>
    <string name="complement">Complemento</string>
    <string name="city">Município</string>
    <string name="state">Estado</string>
    <string name="country">País</string>
    <string name="type">Tipo</string>
    <string name="settings">Configurações</string>
    <string name="markers">Marcadores</string>
    <string name="new_and_revised">Revisões</string>


    <!-- AccountActivity -->
    <string name="configuration_welcome_step_title">Bem-vindo!</string>
    <string name="configuration_welcome_step_message"> Esse aplicativo contém informações sigilosas sobre população e território. O servidor público ou qualquer outra pessoa que divulgar, expor ou utilizar de forma indevida essas informações será responsabilizado nos termos da lei.</string>
    <string name="configuration_login_step_message">Informe suas credenciais para efetuar o acesso:</string>
    <string name="configuration_government_step_message">Selecione o órgão público e pressione avançar:</string>
    <string name="configuration_finish_step_message">Dispositivo configurado com sucesso.</string>

    <!-- Messages        -->
    <string name="error_invalid_email">O login informado é inválido.</string>
    <string name="error_invalid_password">A senha informada é inválida.</string>

    <string name="error_user_not_active">O usuário não está ativo.</string>
    <string name="error_field_required">O preenchimento desse campo é obrigatório.</string>
    <string name="error_connection_failure">Não foi possível conectar ao servidor.</string>
    <string name="error_address_not_found">Endereço não encontrado</string>

    <!-- Validations -->
    <string name="validation_error_min_length">Campo deve conter ao menos %d caractere(s).</string>
    <string name="validation_error_max_length">Campo deve conter no máximo %d caractere(s).</string>
    <string name="validation_error_exact_length">Campo deve conter %d caractere(s).</string>
    <string name="validation_error_not_empty">O preenchimento desse campo é obrigatório.</string>
    <string name="validation_error_invalid_cpf">CPF informado é inválido.</string>
    <string name="validation_error_invalid_city">Cidade não encontrada.</string>
    <string name="validation_error_invalid_birthdate">Data de nascimento inválida.</string>
    <string name="validation_error_invalid_name">Informe o nome e sobrenome.</string>

    <!-- Dialogs         -->
    <string name="dlg_title_login_failure">Não foi possível efetuar o login:</string>
    <string name="dlg_title_request_failure">Não foi possível concluir a requisição:</string>
    <string name="dlg_title_configuration_failure">Não foi possível configurar o dispositivo:</string>
    <string name="button_try_again">Tentar novamente</string>
    <string name="button_ok">Ok</string>
    <string name="title_activity_address">Marcador</string>
    <string name="title_activity_edification">Edificação</string>

    <string name="name">Nome</string>
    <string name="motherName">Mãe</string>
    <string name="fatherName">Pai</string>
    <string name="cpf">CPF</string>
    <string name="rgNumber">RG</string>
    <string name="rgAgency">Órgão</string>
    <string name="rgState">Estado</string>
    <string name="birthPlace">Naturalidade</string>
    <string name="birthDate">Nascimento</string>
    <string name="gender">Gênero</string>
    <string name="socialName">Razão Social</string>
    <string name="fancyName">Fantasia</string>
    <string name="congratulation">Parabéns!</string>
    <string name="try_again">Tentar novamente</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="title_activity_address_dweller">Morador</string>
    <string name="action_save">Salvar</string>
    <string name="action_delete">Excluir</string>
    <string name="cep">CEP</string>
    <string name="error_postal_code">CEP deve conter oito dígitos</string>
    <string name="address">Endereço</string>
    <string name="marker">Marcador</string>
    <string name="modified_address_list">Edição</string>
    <string name="confirm">Confirme</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="success_modified_address_deleted">Resgistro(s) excluido(s) com sucesso.</string>
    <string name="error">Erro</string>
    <string name="new_marker">Novo Marcador</string>
    <string name="title_activity_test">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="refence">Referência</string>
    <string name="upload_sucess">Registro(s) envido(s) com sucesso.</string>
    <string name="download_sucess">Base de dados atualizada com sucesso.</string>
    <string name="navigate">Ir</string>
    <string name="share">Compartilhar</string>
    <string name="apartment">Apartamento</string>
    <string name="commercial_room">Sala Comercial</string>
    <string name="farm">Propriedade Rural</string>
    <string name="house">Casa</string>
    <string name="other">Outra edificação</string>
    <string name="no_results">Não há edificações para serem exibidas.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="refresh">Atualizar</string>
    <string name="action_move">Mudar</string>


</resources>