<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/map">
        <menu>
            <group android:id="@+id/menu_map_type" android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_map_type_normal"
                    android:title="@string/normal"
                    android:icon="@drawable/icon_map_24"
                    android:checked="true"/>
                <item
                    android:id="@+id/menu_map_type_satellite"
                    android:icon="@drawable/icon_satellite_24"
                    android:title="@string/map_satellite"/>
                <item
                    android:id="@+id/menu_map_type_terrain"
                    android:icon="@drawable/icon_terrain_24"
                    android:title="@string/map_terrain"/>
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/icon_settings_24"
            android:title="@string/settings"
            android:checkable="false"/>
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/icon_logout_24"
            android:checkable="false"
            android:title="@string/exit"/>
    </group>
</menu>