<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.developen.sig.ModifiedAddressActivity">

    <item
        android:id="@+id/menu_modified_address_edification_demolish"
        android:orderInCategory="100"
        android:title="@string/action_move"
        android:icon="@drawable/icon_demolish_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_modified_address_edification_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/icon_delete_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_modified_address_edification_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@drawable/icon_save_24"
        app:showAsAction="always" />

</menu>