<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ModifiedAddressEdificationDwellerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:scrollbarStyle="outsideInset"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/fragment_modified_address_edification_dweller_individual_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_mothername_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motherName"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_fathername_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fatherName"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <mk.webfactory.dz.maskededittext.MaskedEditText
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_cpf_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:minWidth="200dp"
                    android:maxLines="1"
                    app:maskededittext_enforceMaskLength="true"
                    app:maskededittext_mask="###.###.###-##"
                    app:maskededittext_maskCharacter="#" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_modified_address_edification_dweller_individual_rgnumber_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/rgNumber"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/fragment_modified_address_edification_dweller_individual_rgagency_spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.30"
                        android:imeOptions="actionNext"
                        android:layout_gravity="start|bottom"
                        android:spinnerMode="dropdown"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>

                    <Spinner
                        android:id="@+id/fragment_modified_address_edification_dweller_individual_rgstate_spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:imeOptions="actionNext"
                        android:layout_gravity="end|bottom"
                        android:spinnerMode="dropdown"
                        style="@style/Widget.AppCompat.Spinner.Underlined"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_birthplace_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthPlace"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <mk.webfactory.dz.maskededittext.MaskedEditText
                    android:id="@+id/fragment_modified_address_edification_dweller_individual_birthdate_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthDate"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:minWidth="200dp"
                    android:maxLines="1"
                    app:maskededittext_enforceMaskLength="true"
                    app:maskededittext_mask="##/##/####"
                    app:maskededittext_maskCharacter="#"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/fragment_modified_address_edification_dweller_individual_gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:imeOptions="actionNext"
                android:hint="@string/gender"
                android:textAlignment="textStart"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>