<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:weightSum="1">

    <ImageView android:src="@drawable/icon_user_100"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/configuration_login_step_message"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:id="@+id/activity_configuration_user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/activity_configuration_user_login_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:hint="@string/login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/activity_configuration_user_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>