<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ModifiedAddressEdificationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_modified_address_edification_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreenMedium"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:paddingTop="@dimen/appbar_padding_top">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_modified_address_edification_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorGreenMedium"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_edification"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_modified_address_edification_tabs"
            android:background="@color/colorGreenMedium"
            app:tabIndicatorColor="@color/colorGreyDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="4dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_modified_address_edification_tabitem_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_modified_address_edification_tabitem_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dwellers"/>

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/activity_modified_address_edification_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_modified_address_edification_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/icon_add_24"
        android:visibility="gone"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorGreyDark"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>